--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-baseurl: http://ku-sldg.github.io
-account: ku-sldg
-repo: vector13
-maintitle: Virtual Vector Lab
-subtitle: Automaticaly Identifying Dieases Carriers
+baseurl: http://ku-sldg.github.io/vector13/
+title: Virtual Vector Lab
+subtitle: Automaticaly identifying dieases carriers
