updating to current template

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 baseurl: http://ku-sldg.github.io/vector12/
 title: Virtual Vector Lab
 subtitle: Automaticaly identifying dieases carriers
+github: https://github.com/ku-sldg/vector12
